clusters/crc-ambient/overlays/istio-member-namespaces/delete-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-clusternetwork-cidr
  namespace: istio-egress
  $patch: delete
