clusters/crc-ambient/overlays/istio-member-namespaces/patch-delete-allow-egress-clusternetwork-cidr.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-clusternetwork-cidr
  namespace: istio-egress
